Bimba Dev/src/objects/Test_Script__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents an executable script for a specific test scenario.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <formula>Test_Scenario__r.Release__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Test Scripts</relationshipLabel>
        <relationshipName>Test_Scripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Case_Failures__c</fullName>
        <label>Test Case Failures</label>
        <summarizedField>Test_Case__c.Execution_failures__c</summarizedField>
        <summaryFilterItems>
            <field>Test_Case__c.Execution_failures__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Test_Case__c.Test_Script__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Test_Scenario__c</fullName>
        <label>Test Scenario</label>
        <referenceTo>Test_Scenario__c</referenceTo>
        <relationshipLabel>Test Scripts</relationshipLabel>
        <relationshipName>Test_Scripts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_Test_Executions__c</fullName>
        <label># of Test Executions</label>
        <summarizedField>Test_Case__c.of_Test_Executions__c</summarizedField>
        <summaryForeignKey>Test_Case__c.Test_Script__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Test Script</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TestScript-{0000000000}</displayFormat>
        <label>Test Script ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Scripts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>